// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLI sub commands backup help strings 1`] = `
"Usage:  backup [options] [command]

Manage backups of your App/Stack shared file system.

Options:
  -h, --help                                           display help for command

Commands:
  take [packageDirectory] [stackName]                  Creates a backup copy of your App/Stack file system, and provides a link where you can download it.
  restore [packageDirectory] [stackName] [backupFrom]  Restore a backup to your App/Stack file system
  help [command]                                       display help for command
"
`;

exports[`CLI sub commands deploy help strings 1`] = `
"Usage:  deploy [options] [packageDirectory] [stackName]

Deploys your pacakge to the cloud, creating and App and Stack.

Options:
  -h, --help  display help for command
"
`;

exports[`CLI sub commands destroy help strings 1`] = `
"Usage:  destroy [options] [packageDirectory] [stackName]

Completely remove a Stack from an App

Options:
  -h, --help  display help for command
"
`;

exports[`CLI sub commands dns help strings 1`] = `
"Usage:  dns [options] [command]

Manage custom domain names.

Options:
  -h, --help                                      display help for command

Commands:
  domain <domainName>
  name <hostName> <packageDirectory> [stackName]
  help [command]                                  display help for command
"
`;

exports[`CLI sub commands env help strings 1`] = `
"Usage:  env [options] [command]

Manage environment variables for an App/Stack.

Options:
  -h, --help                                         display help for command

Commands:
  get [packageDirectory] [stackName]
  set [packageDirectory] [stackName] [variables...]
  help [command]                                     display help for command
"
`;

exports[`CLI sub commands info help strings 1`] = `
"Usage:  info [options] [packageDirectory] [stackName]

This will tell you all about your App and Stack.

Options:
  -h, --help  display help for command
"
`;

exports[`CLI sub commands logs help strings 1`] = `
"Usage:  logs [options] [packageDirectory] [stackName]

Stream real time logs or search cloud stored logs.

Options:
  -h, --help  display help for command
"
`;

exports[`CLI sub commands scale help strings 1`] = `
"Usage:  scale [options] <packageDirectory> [stackName]

Set scaling limits on your App Stack.

Options:
  --number <number>  Number of copies to run -- horizontal scale
  --cpu <number>     Number of CPUs per copy
  --memory <number>  Number of GB of memory, limited by number of CPUs
  -h, --help         display help for command
"
`;
